edits hero file

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,10 @@
 <!-- Cover section -->
 <tr>
-  <td class="" style="
-    padding-bottom: 20px;">
+  <td class="">
     <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
       <tr>
         <td align="center" class="" style="
-            text-align: center;">
+                  text-align: center;">
           <img src="https://i.ibb.co/KhkvwM9/article-1.png" width="600" alt="Изображение плитки шоколада" border="0"
             class="full-width" />
         </td>
@@ -14,58 +13,62 @@
   </td>
 </tr>
 <!-- End Cover section -->
-<!-- Text section -->
 <tr>
-  <td class=" mobile-padding" style="
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 10px;">
-    <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
+  <td style="padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
+      <!-- Text section -->
+      <tr>
+        <td class=" mobile-padding" style="
+          padding-bottom: 10px;">
+          <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
+            <tr>
+              <td class="">
+                <h1 style="
+                    margin: 0;
+                    font-size: 30px;
+                    line-height: normal;
+                    font-weight: 500;
+                    color: #344262;">
+                  Топ 10 самых вкусных плиток молочного шоколада
+                </h1>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <!-- End Text section -->
       <tr>
         <td class="">
-          <h1 style="
-              margin: 0;
-              font-size: 30px;
-              line-height: normal;
-              font-weight: 500;
-              color: #344262;">
-            Топ 10 самых вкусных плиток молочного шоколада
-          </h1>
+          <!-- Button/link section -->
+          <table border="0" cellspacing="0" cellpadding="0" role="presentation">
+            <tr>
+              <td class=" btn" style="
+                  background: #344262;
+                  text-align: center;
+                  border-radius: 10px;">
+                <a href="#" title="Ссылка на новость" target="_blank" rel="noopener" style="
+                    text-align: center;
+                    font-size: 16px;
+                    line-height: 1.5;
+                    font-weight: 400;
+                    color: #ffffff;
+                    background: #344262;
+                    border: 1px solid #344262;
+                    padding: 10px 20px;
+                    text-decoration: none;
+                    display: inline-block;
+                    border-radius: 10px;">
+                  &nbsp;&nbsp;&nbsp;&nbsp;Подробнее&nbsp;&nbsp;&nbsp;&nbsp;
+                </a>
+              </td>
+            </tr>
+          </table>
         </td>
       </tr>
+      <!-- End Button/link section -->
     </table>
   </td>
 </tr>
-<!-- End Text section -->
-<tr>
-  <td class="" style="
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;">
-    <!-- Button/link section -->
-    <table border="0" cellspacing="0" cellpadding="0" role="presentation">
-      <tr>
-        <td class=" btn" style="
-            background: #344262;
-            text-align: center;
-            border-radius: 10px;">
-          <a href="#" title="Ссылка на новость" target="_blank" rel="noopener" style="
-              text-align: center;
-              font-size: 16px;
-              line-height: 1.5;
-              font-weight: 400;
-              color: #ffffff;
-              background: #344262;
-              border: 1px solid #344262;
-              padding: 10px 20px;
-              text-decoration: none;
-              display: inline-block;
-              border-radius: 10px;">
-            &nbsp;&nbsp;&nbsp;&nbsp;Подробнее&nbsp;&nbsp;&nbsp;&nbsp;
-          </a>
-        </td>
-      </tr>
-    </table>
-  </td>
-</tr>
-<!-- End Button/link section -->
