--- a/src/partials/three-cols.html
+++ b/src/partials/three-cols.html
@@ -19,8 +19,7 @@
             max-width: 180px;">
       <tr>
         <td class="" style="padding: 10px;">
-          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="
-                  text-align: ;">
+          <table border="0" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td style="padding-bottom: 20px;">
                 <h2 style="
@@ -56,8 +55,7 @@
                 max-width: 180px;">
       <tr>
         <td class="" style="padding: 10px;">
-          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="
-                      text-align: ;">
+          <table border="0" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td style="padding-bottom: 20px;">
                 <h2 style="
@@ -93,8 +91,7 @@
                     max-width: 180px;">
       <tr>
         <td class="" style="padding: 10px;">
-          <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="
-                          text-align: ;">
+          <table border="0" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td style="padding-bottom: 20px;">
                 <h2 style="
