edits social file

--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -48,7 +48,7 @@
             <tr>
               <td>
                 <a href="#" title="Ссылка на telegram chocolatey" target="_blank" rel="noopener" style="font-size: 0;">
-                  <img src="https://i.ibb.co/ZKgGdNh/tg-icon.png" width="30" alt="логотип telegram" border="0" style="
+                  <img src="https://i.ibb.co/xqYk5hv/in-icon.png" width="30" alt="логотип linkedin" border="0" style="
                                                     max-width:30;" />
                 </a>
               </td>
