--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,7 @@
 </tr>
 <!-- End Cover section -->
 <tr>
-  <td style="padding-top: 20px;
+  <td class="bg-dark" style="padding-top: 20px;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;">
