--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -68,7 +68,7 @@
 <!-- End Two same width cols section -->
 <!-- Text section -->
 <tr>
-  <td class=" mobile-padding" style="padding-bottom: 10px;">
+  <td class="bg-dark mobile-padding" style="padding-bottom: 10px;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
         <td class="">
