adaptive, edits snipets

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -45,6 +45,83 @@
         width: 100% !important;
         max-width: 100% !important;
       }
+
+      .two-cols {
+        padding-top: 20px !important;
+        padding-bottom: 20px !important;
+      }
+
+      .mob-text-view {
+        padding-top: 50px !important;
+      }
+
+      .mob-text-view h1 {
+        font-size: 34px !important;
+      }
+
+      .mob-2col-first {
+        text-align: left !important;
+      }
+
+      .mob-2col-img {
+        padding: 0 !important;
+        padding-bottom: 10px !important;
+      }
+
+      .mob-2col-img img {
+        width: 194px;
+      }
+
+      .mob-2col-second {
+        padding-top: 10px !important;
+      }
+
+      .mob-2col-text {
+        padding: 0 !important;
+      }
+
+      .mob-2col-text h3 {
+        font-size: 30px;
+      }
+
+      .mob-hero {
+        padding-top: 50px !important;
+        padding-bottom: 50px !important;
+      }
+
+      .three-cols {
+        padding-top: 30px !important;
+        padding-bottom: 30px !important;
+      }
+
+      .mob-three-cols {
+        padding: 0 !important;
+        padding-top: 20px !important;
+        padding-bottom: 20px !important;
+      }
+
+      .three-cols-img {
+        text-align: center !important;
+      }
+
+      .three-cols-img img {
+        width: 100% !important;
+        max-width: 320px !important;
+      }
+
+      .mob-social {
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+      }
+
+      .mob-copyright {
+        padding-bottom: 10px !important;
+      }
+
+      .mob-unsubs {
+        padding-top: 5px !important;
+        padding-bottom: 5px !important;
+      }
     }
 
     @media screen and (max-width: 399.98px) {}
