--- a/src/partials/two-cols.html
+++ b/src/partials/two-cols.html
@@ -13,13 +13,13 @@
               <td>
       <![endif]-->
           <!-- Img of Two different width cols section -->
-          <table border="0" cellspacing="0" cellpadding="0" role="presentation" class=" column" style="
+          <table border="0" cellspacing="0" cellpadding="0" role="presentation" class="mob-2col-first column" style="
                         vertical-align: middle;
                         width: 100%;
                         display: inline-block;
                         max-width: 270px;">
             <tr>
-              <td class="" style="padding: 10px;">
+              <td class="mob-2col-img" style="padding: 10px;">
                 <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: center">
                   <tr>
                     <td>
@@ -37,13 +37,14 @@
               <td>
       <![endif]-->
           <!-- Text of Two different width cols section -->
-          <table border="0" cellspacing="0" cellpadding="0" role="presentation" сlass="column" style="
+          <table border="0" cellspacing="0" cellpadding="0" role="presentation" class="mob-2col-second column"
+            id="mob-2col-second" style="
                   vertical-align: middle;
                   width: 100%;
                   display: inline-block;
                   max-width: 270px;">
             <tr>
-              <td class="" style="padding: 10px;">
+              <td class="mob-2col-text" style="padding: 10px;">
                 <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="
                       text-align: left">
                   <tr>
@@ -130,13 +131,13 @@
               <td>
       <![endif]-->
           <!-- Img of Two different width cols section -->
-          <table border="0" cellspacing="0" cellpadding="0" role="presentation" class=" column" style="
+          <table border="0" cellspacing="0" cellpadding="0" role="presentation" class="mob-2col-first column" style="
                         vertical-align: middle;
                         width: 100%;
                         display: inline-block;
                         max-width: 270px;">
             <tr>
-              <td class="" style="padding: 10px;">
+              <td class="mob-2col-img" style="padding: 10px;">
                 <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: center">
                   <tr>
                     <td>
@@ -154,13 +155,13 @@
               <td>
       <![endif]-->
           <!-- Text of Two different width cols section -->
-          <table border="0" cellspacing="0" cellpadding="0" role="presentation" сlass="column" style="
+          <table border="0" cellspacing="0" cellpadding="0" role="presentation" class="mob-2col-second column" style="
                   vertical-align: middle;
                   width: 100%;
                   display: inline-block;
                   max-width: 270px;">
             <tr>
-              <td class="" style="padding: 10px;">
+              <td class="mob-2col-text" style="padding: 10px;">
                 <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="
                       text-align: left">
                   <tr>
