--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Text section -->
 <tr>
-  <td class=" mobile-padding" style="padding-top: 5px;
+  <td class="mob-unsubs mobile-padding" style="padding-top: 5px;
   padding-bottom: 5px;
   background-color: #f5f5f5;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
