--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,26 +14,26 @@
 </tr>
 <!-- End Cover section -->
 <tr>
-  <td class="bg-dark" style="padding-top: 20px;
+  <td class="bg-dark mobile-padding mob-hero" style="padding-top: 20px;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;">
     <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
       <!-- Text section -->
       <tr>
-        <td class=" mobile-padding" style="
+        <td class="" style="
           padding-bottom: 10px;">
           <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td class="">
-                <h1 style="
+                <h3 style="
                     margin: 0;
                     font-size: 30px;
                     line-height: normal;
                     font-weight: 500;
                     color: #344262;">
                   Топ 10 самых вкусных плиток молочного шоколада
-                </h1>
+                </h3>
               </td>
             </tr>
           </table>
