--- a/src/partials/social.html
+++ b/src/partials/social.html
@@ -1,6 +1,6 @@
 <!-- Two same width cols section -->
 <tr>
-  <td align="center" class="bg-dark two-columns mobile-padding" style="font-size: 0;
+  <td align="center" class="bg-dark two-columns mobile-padding mob-social" style="font-size: 0;
   padding-top: 10px;
   padding-bottom: 10px;">
     <!--[if (gte mso 9)|(IE)]>
@@ -68,7 +68,7 @@
 <!-- End Two same width cols section -->
 <!-- Text section -->
 <tr>
-  <td class="bg-dark mobile-padding" style="padding-bottom: 10px;">
+  <td class="bg-dark mobile-padding mob-copyright" style="padding-bottom: 10px;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
         <td class="">
