--- a/src/partials/text.html
+++ b/src/partials/text.html
@@ -1,9 +1,9 @@
 <!-- Text section -->
 <tr>
-  <td class="mobile-padding">
+  <td>
     <table width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
-        <td class="bg-dark" style="
+        <td class="bg-dark mobile-padding mob-text-view" style="
           background-color: #ffffff;
           padding-top: 60px;
           padding-bottom: 10px;
