--- a/src/partials/three-cols.html
+++ b/src/partials/three-cols.html
@@ -1,6 +1,6 @@
 <!-- Three same width cols section -->
 <tr>
-  <td align="center" class="bg-light three-columns" style="font-size: 0;
+  <td align="center" class="bg-light three-cols mobile-padding" style="font-size: 0;
   background-color: #344262;
   padding-top: 40px;
   padding-bottom: 40px;
@@ -18,7 +18,7 @@
             display: inline-block;
             max-width: 180px;">
       <tr>
-        <td class="" style="padding: 10px;">
+        <td class="mob-three-cols" style="padding: 10px;">
           <table border="0" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td style="padding-bottom: 20px;">
@@ -33,7 +33,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="three-cols-img">
                 <img src="https://i.ibb.co/sgMYPJk/news-1.png" width="160" alt="Изображение macarons" border="0" />
               </td>
             </tr>
@@ -54,7 +54,7 @@
                 display: inline-block;
                 max-width: 180px;">
       <tr>
-        <td class="" style="padding: 10px;">
+        <td class="mob-three-cols" style="padding: 10px;">
           <table border="0" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td style="padding-bottom: 20px;">
@@ -69,7 +69,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="three-cols-img">
                 <img src="https://i.ibb.co/J53vKs2/news-2.png" width="160" alt="Изображение fancy drips" border="0" />
               </td>
             </tr>
@@ -85,27 +85,27 @@
 <![endif]-->
     <!-- Col of Three same width cols section -->
     <table border="0" cellpadding="0" cellspacing="0" role="presentation" class="column" style="
-                    vertical-align: top;
-                    width: 100%;
-                    display: inline-block;
-                    max-width: 180px;">
+                vertical-align: top;
+                width: 100%;
+                display: inline-block;
+                max-width: 180px;">
       <tr>
-        <td class="" style="padding: 10px;">
+        <td class="mob-three-cols" style="padding: 10px;">
           <table border="0" cellpadding="0" cellspacing="0" role="presentation">
             <tr>
               <td style="padding-bottom: 20px;">
                 <h2 style="
-                                            margin: 0;
-                                            font-size: 16px;
-                                            line-height: 1.5;
-                                            font-weight: 400;
-                                            color: #ffffff;">
+                                        margin: 0;
+                                        font-size: 16px;
+                                        line-height: 1.5;
+                                        font-weight: 400;
+                                        color: #ffffff;">
                   What is cocoa percentage in chocolate?
                 </h2>
               </td>
             </tr>
             <tr>
-              <td>
+              <td class="three-cols-img">
                 <img src="https://i.ibb.co/4PcH1hs/news-3.png" width="160" alt="Изображение cocoa" border="0" />
               </td>
             </tr>
